--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "chartjs-adapter-date-fns": "^2.0.0",
     "date-fns": "^2.29.3",
     "react": "^18.2.0",
+    "react-button": "^1.2.1",
+    "react-button-component": "^1.0.0",
     "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.2",
