--- a/package.json
+++ b/package.json
@@ -3,11 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.2.0",
+    "@fortawesome/free-brands-svg-icons": "^6.2.0",
+    "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "axios": "^1.1.3",
+    "bootstrap": "^5.2.2",
     "chart.js": "^3.9.1",
     "chartjs-adapter-date-fns": "^2.0.0",
     "date-fns": "^2.29.3",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.6.0",
     "react-button": "^1.2.1",
     "react-button-component": "^1.0.0",
     "react-chartjs-2": "^4.3.1",
@@ -15,6 +21,7 @@
     "react-icons": "^4.6.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "^5.0.1",
+    "react-social-icons": "^5.15.0",
     "styled-components": "^5.3.6"
   },
   "scripts": {
